welcome/goodbye.html.haml

--- a/app/views/welcome/goodbye.html.haml
+++ b/app/views/welcome/goodbye.html.haml
@@ -1,8 +1,8 @@
 .sign-out
   %h1
-    You've been logged out
+    = t(".youve_been_logged_out")
   %h3
-    Come back soon!
+    = t(".come_back_soon")
 
   :plain
     <div class="sharing-buttons">
