welcome/choose_registration.html.haml

--- a/app/views/welcome/choose_registration.html.haml
+++ b/app/views/welcome/choose_registration.html.haml
@@ -9,25 +9,25 @@
                 %a.organization-choice.choose-type{data: {target: new_bike_url(creation_organization_id: membership.organization.id)}}
                   %span.add-selected
                     &#10004
-                  Add a bike through
+                  = t(".add_a_bike_through")
                   %em
                     = membership.organization.name
           %li
             %a.purchase-choice.choose-type{data: {target: new_bike_url}}
               %span.add-selected
                 &#10004
-              Add your own bike
+              = t(".add_your_own_bike")
 
           %li
             %a.choose-type{data: {target: new_bike_url(stolen: true)}}
               %span.add-selected
                 &#10004
-              Add a stolen bike
+              = t(".add_a_stolen_bike")
           %li
             %a.choose-type{data: {target: new_bike_url(recovered: true)}}
               %span.add-selected
                 &#10004
-              Add a stolen/found bike you've recovered
+              = t(".add_a_stolenfound_bike")
       .col-sm-6.add-bike-column
         %a#add-bike.btn.btn-success.btn-lg{href: new_bike_url}
-          Register bike
+          = t(".register_bike")
