--- a/app/views/landing_pages/_for_organizations_photo_list.html.haml
+++ b/app/views/landing_pages/_for_organizations_photo_list.html.haml
@@ -4,31 +4,31 @@
       = link_to for_bike_shops_path, class: "subheader-tile-link" do
         .subheader-image.bg-image-bike-shops
         .subheader-image-caption
-          %em for&nbsp;
+          %em= t(".for")
           %span.upcase
-            Bike Shops
+            = t(".bike_shops")
             %span.chevron &raquo;
     .subheader-tile.col-md-3
       = link_to for_cities_path, class: "subheader-tile-link" do
         .subheader-image.bg-image-bike-cities
         .subheader-image-caption
-          %em for&nbsp;
+          %em= t(".for")
           %span.upcase
-            Cities
+            = t(".cities")
             %span.chevron &raquo;
     .subheader-tile.col-md-3
       = link_to for_schools_path, class: "subheader-tile-link" do
         .subheader-image.bg-image-bike-schools
         .subheader-image-caption
-          %em for&nbsp;
+          %em= t(".for")
           %span.upcase
-            Schools
+            = t(".schools")
             %span.chevron &raquo;
     .subheader-tile.col-md-3
       = link_to for_community_groups_path, class: "subheader-tile-link" do
         .subheader-image.bg-image-bike-groups
         .subheader-image-caption
-          %em for&nbsp;
+          %em= t(".for")
           %span.upcase
-            Community Groups
+            = t(".community_groups")
             %span.chevron &raquo;
