welcome/recovery_stories.html.haml

--- a/app/views/welcome/recovery_stories.html.haml
+++ b/app/views/welcome/recovery_stories.html.haml
@@ -1,7 +1,7 @@
 .container
   .row
     %h3
-      Recovery Stories
+      = t(".recovery_stories")
 
   #recovery-stories-listing
     .container.clearfix
