--- a/app/views/welcome/update_browser.html.haml
+++ b/app/views/welcome/update_browser.html.haml
@@ -1,10 +1,7 @@
 !!!
 %html
 %body
-  %h1
-    Oh No!
-  %h2
-    We're sorry, Bike Index does not support your browser.
+  %h1= t(".oh_no")
+  %h2= t(".unsupported_browser")
 
-  %p
-    = link_to "Go here to learn more", "http://whatbrowser.com"
+  %p= link_to t(".go_here_to_learn_more"), "https://www.whatsmybrowser.org/"
