--- a/app/views/shared/_alert.html.haml
+++ b/app/views/shared/_alert.html.haml
@@ -1,6 +1,7 @@
-/ NOTE
-/ There is a mustache alert template in revised_messages
-/ that needs to be updated when this changes
+-# NOTE
+-# ----
+-# There is a mustache alert template in revised_messages
+-# that needs to be updated when this changes
 
 - class_names ||= ''
 - type ||= 'error'
@@ -9,6 +10,7 @@
 
 - title ||= false
 - body ||= ''
+
 - unless body.include? '<' # Ensure we make it html
   - body = content_tag(:p, body)
 
@@ -16,6 +18,5 @@
   %button.close{'aria-label' => 'Close', 'data-dismiss' => 'alert', type: 'button'}
     %span{'aria-hidden' => 'true' } &times;
   - if title
-    %h4
-      = title
+    %h4= title
   = body
