--- a/app/views/layouts/application_revised.html.haml
+++ b/app/views/layouts/application_revised.html.haml
@@ -13,9 +13,8 @@
         %a.primary-logo{ href: user_root_url }
           = image_tag "revised/logo.svg", class: "primary-nav", alt: "Bike Index home"
         = link_to news_path("bike-index--now-a-nonprofit"), class: "nonprofit-subtitle" do
-          the non-profit
-          %br
-          bike registry
+          = t(".the_nonprofit_bike_registry")
+
         - if current_user.present? && passive_organization.present?
           %span.current-organization-nav-item
             %a#passive_organization_submenu{ "aria-haspopup" => "true", "aria-expanded" => "false", data: { toggle: "dropdown" } }
