--- a/app/views/layouts/application_revised_bikehub.html.haml
+++ b/app/views/layouts/application_revised_bikehub.html.haml
@@ -1,4 +1,4 @@
-/ copies application_revised assets but dramatically different
+-# copies application_revised assets but dramatically different
 !!!
 %html{ style: "background: #fff; padding-bottom: 40px;" }
   %head
@@ -8,8 +8,9 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     = javascript_include_tag 'application_revised'
     <!--[if IE]>$('body').prepend("<div id='old-browser-warning'><h4>Your browser is out of date!</h4><p>As a result, Bike Index will not function correctly. <a href=\"http://whatbrowser.com\">Learn more here</a>.</p></div>")<![endif]-->
+
   %body{ id: page_id, class:  body_class, style: "padding-top: 0;" }
-    / This is either the signup or signin page
+    -# This is either the signup or signin page
     - signup_page = controller_name != "sessions"
     %nav.navbar.nav.bikehub-nav
       .container-fluid
@@ -17,30 +18,31 @@
           %a.bikehub-logo{ href: "https://bikehub.com" }
             = image_tag "logos/bikehub_logo.png", class: "primary-nav", alt: "BikeHub home"
           .poweredby
-            %p
-              powered by
+            %p= t(".powered_by")
             %a.primary-logo{ href: user_root_url }
               = image_tag "logo.svg", class: "primary-nav", alt: "Bike Index home"
           %a.bikehub-nav-item.bikehub-nav-item-first{ href: "https://bikehub.com/contact/" }
-            Contact
+            = t(".contact")
           %a.bikehub-nav-item{ href: new_user_path(partner: sign_in_partner), class: (signup_page ? "active" : "") }
-            Sign up
+            = t(".sign_up")
           %a.bikehub-nav-item{ href: new_session_path(partner: sign_in_partner), class: (signup_page ? "" : "active") }
-            Log in
+            = t(".log_in")
     .container.bikehub-explanation.mb-4
       .row
         .col-sm-12
           %h1
-            BikeHub
-            = signup_page ? "Sign up" : "Log In"
+            = t(".bikehub")
+            = signup_page ? t(".sign_up") : t(".log_in")
       .row
         .col-sm-12
-          %p
-            BikeHub accounts are powered by Bike Index – the premier bike registry.
-            = signup_page ? "Creating an account" : "Logging in"
-            here will 
-            = signup_page ? "sign you up for" : "log you in to"
-            BikeHub.
+          - if signup_page
+            %p
+              = t(".powered_by_bike_index")
+              = t(".signup_message")
+          - else
+            %p
+              = t(".powered_by_bike_index")
+              = t(".login_message")
 
     = render "layouts/revised_messages"
     = yield
@@ -49,15 +51,12 @@
       .row
         .col-sm-12
           %h2
-            WHY BIKEINDEX?
+            = t(".why_bikeindex")
       .row
         .col-sm-12
-          %p
-            Bike Index is a 501(c)(3) nonprofit and the most widely used bicycle registration service in the world.
-          %p
-            At BikeHub, we believe bike security is more than just a strong U-lock.
-          %p
-            Through this partnership, BikeHub patrons enjoy access to the most secure public bike parking – and registration with nation’s largest network, used by law enforcement agencies, universities, and advocates to connect recovered bikes with their owners.
+          %p= t(".bikeindex_a_nonprofit")
+          %p= t(".bike_security")
+          %p= t(".bikeindex_bikehub_partnership")
 
   :javascript
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
