organized map update

--- a/app/views/organized/manage/locations.html.haml
+++ b/app/views/organized/manage/locations.html.haml
@@ -13,7 +13,7 @@
           Display
           %em
             = @organization.name
-          on #{ link_to 'map', where_path, target: '_blank' }
+          on #{ link_to "Bike Index partner map", where_path, target: "_blank" }
     .col-sm-4
       = revised_link_to_add_fields 'Add location', f, :locations, class_name: 'btn btn-secondary btn-lg'
 
