--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,40 +3,33 @@
     .receptacle
       %ul.footer-links
         %li
-          = link_to "Register a bike", choose_registration_url
+          = link_to t(".register_a_bike"), choose_registration_url
           %ul
-            %li
-              = link_to "Bike Index partner organizations", where_url
-            %li
-              = link_to "Bike Index resources", resources_url
+            %li= link_to t(".bike_index_partner_organizations"), where_url
+            %li= link_to t(".bike_index_resources"), resources_url
 
         %li
-          = link_to "About Bike Index", about_url
+          = link_to t(".about_bike_index"), about_url
           %ul
-            %li
-              = link_to "Bike Index news", news_index_url
-            %li
-              = link_to "List of manufacturers", manufacturers_url
+            %li= link_to t(".bike_index_news"), news_index_url
+            %li= link_to t(".list_of_manufacturers"), manufacturers_url
 
         %li.contact-nav-btns
-          = link_to "Help", help_url
+          = link_to t(".help"), help_url
           %ul
             %li
-              = link_to "Contact us", help_path(anchor: 'contact_us_section')
-              = link_to "Sign up a shop or organization", new_organization_path
+              = link_to t(".contact_us"), help_path(anchor: 'contact_us_section')
+              = link_to t(".sign_up_a_shop_or_organization"), new_organization_path
 
         %li.social
           %ul
-            %li
-              = link_to image_tag("facebook.svg", alt: "Bike Index Facebook"), "https://facebook.com/bikeindex"
-            %li
-              = link_to image_tag("twitter.svg", alt: "Bike Index Twitter"), "https://twitter.com/BikeIndex"
+            %li= link_to image_tag("facebook.svg", alt: "Bike Index Facebook"), "https://facebook.com/bikeindex"
+            %li= link_to image_tag("twitter.svg", alt: "Bike Index Twitter"), "https://twitter.com/BikeIndex"
 
       %p
         %span{data: {license: "https://github.com/bikeindex/bike_index/blob/master/LICENSE"}}
-          #{Time.current.year} &copy; Bike Index.
-        - if current_user.present? && current_user.has_membership?
-          #{link_to "Privacy policy", privacy_url}, #{link_to "vendor terms", vendor_terms_url}
-        - else
-          #{link_to "Privacy policy", privacy_url}
-        and #{link_to "terms and conditions", terms_url}.
+          #{Time.current.year} &copy; Bike Index
+
+        = [link_to(t(".privacy_policy"), privacy_url),
+        (current_user&.has_membership? ? link_to(t(".vendor_terms"), vendor_terms_url) : nil),
+        link_to(t(".terms_and_conditions"), terms_url)].compact.to_sentence
