--- a/app/views/shared/_form_well_footer_save.html.haml
+++ b/app/views/shared/_form_well_footer_save.html.haml
@@ -1,3 +1,3 @@
 - is_disabled ||= false
 .extra-footer-save
-  = submit_tag 'Save changes', class: 'btn btn-lg btn-primary', disabled: is_disabled
+  = submit_tag t(".save_changes"), class: 'btn btn-lg btn-primary', disabled: is_disabled
