--- a/app/javascript/stylesheets/_table_extensions.scss
+++ b/app/javascript/stylesheets/_table_extensions.scss
@@ -22,6 +22,10 @@
     font-size: 80%;
     font-style: italic;
   }
+  tr td:first-child.full-width-data {
+    font-size: 100%;
+    font-style: normal;
+  }
   tr td:last-child {
     width: 85%; // This is effectively min-width for tables
   }
