--- a/app/views/admin/ownerships/edit.html.haml
+++ b/app/views/admin/ownerships/edit.html.haml
@@ -1,9 +1,8 @@
-.admin-subnav
-  .col-12
-    %h1 Edit ownership
-
 = render partial: "/admin/bikes/bike", locals: {bike: @bike, target: "show" }
 
+.admin-subnav.midpage-subnav
+  .col-12
+    %h1 Edit ownership
 .row
   .col-auto
     %h2
