Consolidate bikeup signup / login keys
This entry is cut up too granularly

--- a/app/views/layouts/application_revised_bikehub.html.haml
+++ b/app/views/layouts/application_revised_bikehub.html.haml
@@ -31,8 +31,10 @@
       .row
         .col-sm-12
           %h1
-            = t(".bikehub")
-            = signup_page ? t(".sign_up") : t(".log_in")
+            - if signup_page
+              = t(".bikehub_signup")
+            - else
+              = t(".bikehub_login")
       .row
         .col-sm-12
           - if signup_page
