--- a/app/views/shared/_period_select.html.haml
+++ b/app/views/shared/_period_select.html.haml
@@ -1,13 +1,13 @@
 #timeSelectionBtnGroup.col-md.col-12.text-right{ role: "group" }
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "hour"), data: { period: "hour" } }
-    last hour
+    = t(".last_hour")
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "day"), data: { period: "day" } }
-    last day
+    = t(".last_day")
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "week"), data: { period: "week" } }
-    last 7 days
+    = t(".last_7_days")
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "month"), data: { period: "month" } }
-    last 30 days
+    = t(".last_30_days")
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "year"), data: { period: "year" } }
-    last year
+    = t(".last_year")
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "all"), data: { period: "all" } }
-    All
+    = t(".all")
